--- a/src/Gistlyn.Tests/packages.config
+++ b/src/Gistlyn.Tests/packages.config
@@ -2,16 +2,16 @@
 <packages>
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
   <package id="NUnit" version="3.12.0" targetFramework="net462" />
-  <package id="ServiceStack" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite.Sqlite" version="5.8.0" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.8.0" targetFramework="net462" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net462" />
-  <package id="System.Data.SQLite.Core" version="1.0.112.0" targetFramework="net462" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net462" />
+  <package id="ServiceStack" version="5.9.0" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="5.9.0" targetFramework="net462" />
+  <package id="ServiceStack.Common" version="5.9.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.9.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.9.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.Sqlite.Windows" version="5.9.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.9.0" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net462" />
 </packages>
