--- a/src/Gistlyn.AppWinForms/packages.config
+++ b/src/Gistlyn.AppWinForms/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ServiceStack.Common" version="5.10.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite" version="5.10.0" targetFramework="net462" />
+  <package id="ServiceStack.OrmLite.Sqlite.Windows" version="5.10.0" targetFramework="net462" />
+  <package id="ServiceStack.Text" version="5.10.0" targetFramework="net462" />
+  <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net462" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net462" />
   <package id="cef.redist.x64" version="3.3325.1758" targetFramework="net462" />
   <package id="cef.redist.x86" version="3.3325.1758" targetFramework="net462" />
   <package id="CefSharp.Common" version="65.0.1" targetFramework="net462" />
@@ -12,15 +18,11 @@
   <package id="Microsoft.CodeAnalysis.Scripting.Common" version="3.2.0" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
   <package id="Mono.Cecil" version="0.10.0" targetFramework="net462" />
-  <package id="ServiceStack" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.Client" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.Common" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.Interfaces" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.OrmLite.Sqlite.Windows" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.Redis" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.Server" version="5.9.2" targetFramework="net462" />
-  <package id="ServiceStack.Text" version="5.9.2" targetFramework="net462" />
+  <package id="ServiceStack" version="5.10.0" targetFramework="net462" />
+  <package id="ServiceStack.Client" version="5.10.0" targetFramework="net462" />
+  <package id="ServiceStack.Interfaces" version="5.10.0" targetFramework="net462" />
+  <package id="ServiceStack.Redis" version="5.10.0" targetFramework="net462" />
+  <package id="ServiceStack.Server" version="5.10.0" targetFramework="net462" />
   <package id="SharpCompress" version="0.22.0" targetFramework="net462" />
   <package id="Splat" version="5.0.2" targetFramework="net462" />
   <package id="squirrel.windows" version="1.8.0" targetFramework="net462" />
@@ -30,7 +32,6 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net462" />
   <package id="System.Console" version="4.3.1" targetFramework="net462" />
-  <package id="System.Data.SQLite.Core" version="1.0.113.1" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net462" />
